0.26:
 * Improved mouse dragging.
 
0.25:
 * Bazaar support (John Arbash Meinel).
 * Dragging the mouse on the background moves the camera.
 * Added --camera-mode option (track,overview).
 * Support DOS line endings in logs.
 * Improved compatibility of hg log command (Brendan Cully).
 * Fixed PPM exporter producing blank images on some video cards.
 * Fixed parsing of negative timezones from cvs-exp.pl logs.
 * Fixed various gdb and compiler warnings.

0.24:
 * PPM output speed improvements, including using a second thread (HighlandSun).
 * Now using standard autotools (Flameeyes).
 * Fixed --max-file-lag not working with some custom log files.
 * Gource will stop at the end of the log by default when recording a video.
 * Fixed STDIN stopping working after the first lot of records with tail -f.
 * Added proper exception handling.
 * Print errors to stderr.

0.23:
 * Hiding filenames no longer hides directory names.
 * Fixed --stop-on-idle option.
 * Added --stop-at-end option (more intuitive than --stop-position 1.0).

0.22:
 * Fixed Mercurial log order.

0.21b:
 * Fixed windows build.

0.21: 
 * Some documentation fixes.

0.20:
 * Added bloom effect (turn off with --disable-bloom).
 * Added support for Mercurial (thanks to Justin Love for gource.style).
 * --start-position option now works in combination with --disable-progress.

0.19:
 * Use time_t instead of long for timestamps.

0.18:
 * Fixed camera movement while the simulation is paused.

0.17:
 * Show correct month for CVS logs.
 * Added time scaling (Bitshifter).

0.16:
 * Added --hide-dirnames option.
 * Added --user-scale option.
 * Added --date-format option (Pat Notz).
 * Fix bug when encountering long log lines.
 * Fixed incorrect parsing of trivial merges.
 * Fixed building issues on OSX.

0.15:
 * Added PPM output support for creating videos (Johannes Schindelin).
 * Added experimental Apache combined access log support (--log-format apache).