@@ -229,6 +229,8 @@ Interactive keyboard commands:
 .ti 10
 (C)   Displays Gource logo
 .ti 10
+(M)   Toggle mouse visibility.
+.ti 10
 (N)   Jump forward in time to next log entry.
 .ti 10
 (+-)  Adjust simulation speed.
